--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <form id="search-form">
-        <input type="text" id="Search-box" placeholder="What are you looking for?">
+        <input type="text" list="Search-box" id="Search-box" placeholder="What are you looking for?">
         <button id="search-btn">Search</button>
     </form>
     <div id="search-result">
